Problem solve : Change brand request successful message

--- a/app/views/shared/_sign_up_success_message.html
+++ b/app/views/shared/_sign_up_success_message.html
@@ -9,9 +9,9 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="success_icon">
-                            Your request is successful sent to our administrator
+                            Your request is successfully sent to the Administrator.
                             <br>
-                            We will contact you soon.
+                            We will contact you soon through mail.
                         </div>
                     </div>
                 </div>
