Problem solve : After activation of brand they can use their old password to log in. New password link removed

--- a/app/views/admin/admins/activate_user.js.erb
+++ b/app/views/admin/admins/activate_user.js.erb
@@ -1,5 +1,6 @@
 <% if @success %>
     window.location.reload();
 <% else %>
-    alert("<%= @message %>");
+bootbox.alert({message: '<%= @message %>',
+    closeButton: false});
 <% end %>
