--- a/app/views/admin/invitations/_invitation.html.erb
+++ b/app/views/admin/invitations/_invitation.html.erb
@@ -3,7 +3,7 @@
   <td><%= invitation.first_name %></td>
   <td><%= invitation.last_name %></td>
   <td><%= invitation.email %></td>
-  <td><%= invitation.time %></td>
+  <td><%= local_time_convert(invitation.created_at) %></td>
   <td><%= link_to 'Re-invite', influencer_resend_admin_invitation_path(invitation), remote: true %></td>
 </tr>
 <% end %>
