Problem solve : Influencer log in / Sign up modal spelling correction

--- a/app/views/profile/_add_facebook_account.html.erb
+++ b/app/views/profile/_add_facebook_account.html.erb
@@ -8,7 +8,7 @@
           </div>
           <div class="modal-body">
             <div class="add-another-account">Manage Account</div>
-            <p class='text-danger text-small'>N.B: Engaged Account can not be removed.</p>
+            <p class='text-danger text-small'>N.B: If account is already engaged in campaigns then it can not be removed(unchecked).</p>
 
             <div class="account-content">
                 <form method="POST" action="<%= update_accounts_profile_index_path %>" <%= 'data-remote="true"' if remote %>>
