--- a/app/views/shared/_influencer_log_in_sign_up_form.html.erb
+++ b/app/views/shared/_influencer_log_in_sign_up_form.html.erb
@@ -25,7 +25,7 @@
       </br>
       </br>
       </br>
-      <div>Are you an Brand, please login  <a href="<%= brand_home_public_index_path(sign_in_modal: true) %>"><span class="here-underline">here</span></a>.</div>
+      <div>Are you a Brand, please login  <a href="<%= brand_home_public_index_path(sign_in_modal: true) %>"><span class="here-underline">here</span></a>.</div>
     </div>
 
 
@@ -36,7 +36,7 @@
       </br>
       </br>
       </br>
-      <div>Are you an Brand, please Sign up <a href="<%= brand_home_public_index_path(sign_up_modal: true) %>"><span class="here-underline">here</span></a>.</div>
+      <div>Are you a Brand, please Sign up <a href="<%= brand_home_public_index_path(sign_up_modal: true) %>"><span class="here-underline">here</span></a>.</div>
     </div>
 
   </div>
