--- a/app/assets/stylesheets/brands_home.scss
+++ b/app/assets/stylesheets/brands_home.scss
@@ -177,7 +177,7 @@ ul.menu-item li {
 }
 
 .identity {
-  background: image-url("Pic1.png") no-repeat scroll center center / cover ;
+  background: image-url("header-image.png") no-repeat scroll center center / cover ;
   height: 620px;
   padding-top: 70px;
   margin-top: 12px;
@@ -285,7 +285,7 @@ ul.menu-item li {
 
 .statistics .stats-block {
   display: inline-block;
-  width: 29.7%;
+  width: 29.8%;
   text-align: left;
 }
 
@@ -315,7 +315,7 @@ ul.menu-item li {
 }
 
 .about-us {
-  background-image: image-url("Pic2.png");
+  background-image: image-url("about-us.png");
   background-size: cover;
   background-position: 50%;
   background-repeat: no-repeat;
@@ -440,7 +440,7 @@ ul.menu-item li {
 }
 
 .contact-us {
-  background-image: image-url("Pic3.png");
+  background-image: image-url("get-in-touch.png");
   background-size: cover;
   background-position: 50%;
   background-repeat: no-repeat;
@@ -683,6 +683,7 @@ ul.menu-item li {
 
   .brands {
     padding-bottom: 50px;
+    background-color: white;
   }
 
   .influencer-text {
