Get in touch: Submit button font weight change

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1654,6 +1654,7 @@ a .offer-box:last-child{
   height: 36px;
   min-width: 111px;
   margin-top: 14px;
+  font-weight: 600;
 }
 
 // user setting page save button specific style
