--- a/app/views/campaigns/influencer_campaign.html.erb
+++ b/app/views/campaigns/influencer_campaign.html.erb
@@ -60,7 +60,7 @@
                     <%= link_to 'Set facebook activity', 'javascript:', :class => 'btn', data: { campaign: campaign.id, page: campaign.facebook_account.account_id, activity: campaign.social_account_activity_id, target: 'SetFacebookActivity' } %>
                   </td>
                   <td><%= campaign.number_of_likes %></td>
-                  <td><%= campaign.number_of_post_reach %></td>
+                  <td><%= campaign.number_of_post_reach_of_post %></td>
                   <td><%= campaign.start_date.present? ? campaign.start_date.strftime('%B %d, %Y') : 'NA' %></td>
                   <td><%= campaign.end_date.present? ? campaign.end_date.strftime('%B %d, %Y') : 'NA' %></td>
                 </tr>
