Signed out problem resolved

--- a/app/views/profile/_add_facebook_account.html.erb
+++ b/app/views/profile/_add_facebook_account.html.erb
@@ -37,7 +37,7 @@
 
                     <br/>
 
-                    <input class="btn-inf-fb-connect" type="submit" value="CONNECT"/>
+                    <input class="btn-inf-fb-connect load-page" type="submit" value="CONNECT"/>
                 </form>
             </div>
 
@@ -52,3 +52,4 @@
       </div>
     </div>
 </script>
+
