--- a/app/views/profile/_add_facebook_account.html.erb
+++ b/app/views/profile/_add_facebook_account.html.erb
@@ -7,8 +7,8 @@
             <button type="button" class="close add-fb-account-close" data-dismiss="modal">&times;</button>
           </div>
           <div class="modal-body">
-            <div class="add-another-account">Manage Account</div>
-            <p class="red-text text-small">Note: The account that is actively engaged in campaign cannot be removed/unchecked</p>
+            <div class="add-another-account">Accounts</div>
+            <p class="red-text text-small">Note: TheBrandreach.com won't manage any account or TheBrandreach.com will not post anything without Influencers Permissions. TheBrandreach.com don't have permission to post on influencers page without Influencer's knowledge. TheBrandreach.com is taking access of your page only to get Insights about Page reach, post reach and demographic information. Also, The account that is actively Engagement cannot be removed.</p>
 
             <div class="account-content">
                 <form method="POST" action="<%= update_accounts_profile_index_path %>" <%= 'data-remote="true"' if remote %>>
