Changed manage account button name

--- a/app/views/profile/_select_accounts_partial.html.erb
+++ b/app/views/profile/_select_accounts_partial.html.erb
@@ -18,7 +18,7 @@
       <% end %>
   <% end %>
 
-  <button type="button" class="btn btn-account button-border-yellow js-add-account" href="javascript:">MANAGE ACCOUNT</button>
+  <button type="button" class="btn btn-account button-border-yellow js-add-account" href="javascript:">ADD PAGES</button>
 
   <%= render 'shared/add_account_modal', remote: false %>
 
