Change message again

--- a/app/views/profile/_add_facebook_account.html.erb
+++ b/app/views/profile/_add_facebook_account.html.erb
@@ -8,7 +8,7 @@
           </div>
           <div class="modal-body">
             <div class="add-another-account">Accounts</div>
-            <p class="red-text text-small">Note: TheBrandreach.com won't manage any account or TheBrandreach.com will not post anything without Influencers Permissions. TheBrandreach.com don't have permission to post on influencers page without Influencer's knowledge. TheBrandreach.com is taking access of your page only to get Insights about Page reach, post reach and demographic information. Also, The account that is actively Engagement cannot be removed.</p>
+            <p class="red-text text-small">Note: TheBrandreach.com won't manage any account or TheBrandreach.com do not have access to post or manage anything without Influencers Permissions. TheBrandreach.com is taking access of your page only to get Insights about Page reach, post reach and demographic information. Also, the account that is actively Engaged with Brand cannot be removed during that Engagement period.</p>
 
             <div class="account-content">
                 <form method="POST" action="<%= update_accounts_profile_index_path %>" <%= 'data-remote="true"' if remote %>>
