Change modal header name of Add account

--- a/app/views/profile/_add_facebook_account.html.erb
+++ b/app/views/profile/_add_facebook_account.html.erb
@@ -7,7 +7,7 @@
             <button type="button" class="close add-fb-account-close" data-dismiss="modal">&times;</button>
           </div>
           <div class="modal-body">
-            <div class="add-another-account">Accounts</div>
+            <div class="add-another-account">Add Pages</div>
             <p class="red-text text-small">Note: TheBrandreach.com won't manage any account or TheBrandreach.com do not have access to post or manage anything without Influencers Permissions. TheBrandreach.com is taking access of your page only to get Insights about Page reach, post reach and demographic information. Also, the account that is actively Engaged with Brand cannot be removed during that Engagement period.</p>
 
             <div class="account-content">
