Change number_of_post_reach_of_post for brands campaign. It was not showing correctly

--- a/app/views/campaigns/brand_campaign.html.erb
+++ b/app/views/campaigns/brand_campaign.html.erb
@@ -127,7 +127,7 @@
                 <% end %>
               </td>
               <td><%= campaign.number_of_likes %></td>
-              <td><%= campaign.number_of_post_reach %></td>
+              <td><%= campaign.number_of_post_reach_of_post %></td>
               <td><%= campaign.number_of_comments %></td>
               <td><%= campaign.number_of_shares %></td>
             </tr>
