1. Make celebrity and community type for different kind of influencer 2. Change sign up design for celebrity 3. make backend work for parse celebrity type with facebook omniauth and catch that data in server 4. Remove some validation for celebrities 5. give permission to celebrities to sign up with out some validation 6. Change profile completion condition as now celebrities can sign up with out some validation 7. Make two different tab for community and celebrity 8. Make new design for community and celebrity 9. New pagination for tab different tab in community and celebrity 10.  Different search scope : Now brands can go to the celebrity tab and can use advanced search only on celebrities 11. Different search scope : Now brands can go to the community tab and can use advanced search only on communities 12. Responsive design for new tab design in explore page

--- a/app/assets/stylesheets/brands-explore.css
+++ b/app/assets/stylesheets/brands-explore.css
@@ -56,6 +56,12 @@
     position: relative;
 }
 
+#explore-tab-content {
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+}
+
 .brands-explore-content-wrapper .influencer-industry.click-able{
     cursor: pointer;
     text-decoration: underline;
@@ -120,7 +126,11 @@
 }
 
 .search-result {
-    /*margin-right: -30px;*/
+    padding-top: 10px;
+}
+
+#explore-tabs>li.active>a, #explore-tabs>li.active>a:hover, #explore-tabs>li.active>a:focus {
+    background-color: #f9f9f9;
 }
 
 .padding-less-column-parent > [class *='col-']{
