--- a/app/views/admin/admins/influencer_list.html.erb
+++ b/app/views/admin/admins/influencer_list.html.erb
@@ -14,6 +14,7 @@
       <th>Email</th>
       <th>Phone</th>
       <th>Company Name</th>
+      <th>Influencer Type</th>
       <th>Date</th>
       <th>Action</th>
       <th></th>
