--- a/app/views/explores/_explore_celebrity.html.erb
+++ b/app/views/explores/_explore_celebrity.html.erb
@@ -31,5 +31,5 @@
 </div>
 
 <div class="pagination-center-align">
-  <%= paginate accounts, param_name: page_name, :params => {:tab_name => 'community_tab'} %>
+  <%= paginate accounts, param_name: page_name, :params => {:tab_name => 'celebrity_tab'}%>
 </div>
