--- a/app/views/profile/profile.html.erb
+++ b/app/views/profile/profile.html.erb
@@ -47,13 +47,21 @@
         <div class="form-group">
           <div class="col-md-6">
             <%= f.label :industry, class: 'industry-label'%>
-            <%= f.collection_select :industry, @all_industries, :id, :name, { selected: @selected_industries.map(&:id) }, { class: 'chosen js-skip-select-box', multiple: true, 'data-parsley-required' => 'true', 'data-parsley-errors-container' => '#industry_field_error' }  %>
+            <% if @user.community? %>
+                <%= f.collection_select :industry, @all_industries, :id, :name, { selected: @selected_industries.map(&:id) }, { class: 'chosen js-skip-select-box', multiple: true, 'data-parsley-required' => 'true', 'data-parsley-errors-container' => '#industry_field_error' }  %>
+            <% else %>
+                <%= f.collection_select :industry, @all_industries, :id, :name, { selected: @selected_industries.map(&:id) }, { class: 'chosen js-skip-select-box', multiple: true }  %>
+            <% end %>
             <div id="industry_field_error"></div>
           </div>
           <div class="col-md-6">
             <%= f.label :phone %>
-            <%= f.text_field :phone, maxlength: 20, 'data-parsley-pattern' => '^[\+]?[0-9]+[-]?[0-9]+[-]?[0-9]+$', 'data-parsley-required' => 'true', 'data-parsley-length' => '[10, 14]' %>
-          </div>
+            <% if @user.community? %>
+                <%= f.text_field :phone, maxlength: 20, 'data-parsley-pattern' => '^[\+]?[0-9]+[-]?[0-9]+[-]?[0-9]+$', 'data-parsley-required' => 'true', 'data-parsley-length' => '[10, 14]' %>
+            <% else %>
+                <%= f.text_field :phone, maxlength: 20, 'data-parsley-pattern' => '^[\+]?[0-9]+[-]?[0-9]+[-]?[0-9]+$', 'data-parsley-length' => '[10, 14]' %>
+            <% end %>
+            </div>
         </div>
 
         <div class="form-group">
@@ -77,7 +85,7 @@
               </div>
               <div class="col-md-12">
                 <%= f.label :city %>
-                <%= f.text_field :city, maxlength: 50, 'data-parsley-required' => 'true' %>
+                <%= f.text_field :city, maxlength: 50 %>
               </div>
               <div class="col-md-12">
                 <%= f.label :country %>
@@ -127,8 +135,12 @@
         <div class="form-group short-bio-row">
           <div class="col-md-12">
             <%= f.label :short_bio, 'Short Bio', class: 'textarea-label' %>
-            <%= f.text_area :short_bio, rows: 8, class: 'short_bio', maxlength: '1000', 'data-parsley-required' => 'true' %>
-          </div>
+            <% if @user.community? %>
+                <%= f.text_area :short_bio, rows: 8, class: 'short_bio', maxlength: '1000', 'data-parsley-required' => 'true' %>
+            <% else %>
+                <%= f.text_area :short_bio, rows: 8, class: 'short_bio', maxlength: '1000' %>
+            <% end %>
+            </div>
         </div>
       </div>
 
@@ -178,7 +190,7 @@
               var country_code = $('#user_country').find('option:selected').val();
               var phone_number =  $('#user_phone').val();
 
-              if ( PhoneFormat.isValidNumber(phone_number, country_code) != true ) {
+              if ( PhoneFormat.isValidNumber(phone_number, country_code) != true && phone_number.length != 0) {
 //                  console.log(phone_number + '   ' +country_code);
 //                  console.log(PhoneFormat.isValidNumber(phone_number, country_code));
                   bootbox.alert({message: 'Invalid phone number', closeButton: false});
