1. Make different section for sending celebrity email 2. Redirect to another page when brands will send request for celebrities 3. Send email to the mc@brandreach.com if brands wants to make campaign with celebrities. 4. 'Send Request' button color problem solved 5. Make responsive design of 'campaign for celebrities' page

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1770,6 +1770,10 @@ a .offer-box:last-child{
   }
 }
 
+.btn-brand-send-campaign-request:focus {
+  color: white;
+}
+
 .btn-brand-campaign-view{
   @extend .br-btn-primary;
   padding: 5px 10px;
