--- a/app/views/profile/_read_only_profile_modal.html.erb
+++ b/app/views/profile/_read_only_profile_modal.html.erb
@@ -19,7 +19,7 @@
 
           <p class="title font-raleway"></p>
 
-          <p class="influencer-address font-raleway"> <%= user.location %></p>
+          <p class="influencer-address font-raleway"> <%= user.full_address %></p>
         </div>
 
         <div class="display-inline-block pull-right like-send-request">
@@ -110,7 +110,7 @@
           </div>
           <div class="col-md-6">
             <div class="view-profile-industry font-raleway"> Location</div>
-            <p class="font-raleway"><%= user.location %></p>
+            <p class="font-raleway"><%= user.full_address %></p>
           </div>
         </div>
       </div>
