Solved double reloading of  some pages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -220,7 +220,7 @@
   </div>
 </footer>
 
-<%= render partial: 'shared/profile_image_crop', locals: { user: current_user }%>
+<%#= render partial: 'shared/profile_image_crop', locals: { user: current_user }%>
 <div class="loader"></div>
 
 <!-- generic modal container -->
