1. Showing all celebrities in admin section view design and make new tab in admin section. 2. To show all celebrities in admin needed backend work and new table. So made it. 3. Sending email to the admin: Email format changed. Now details of brand and influencer will shown in Email. 4. Delete functionality for remove campaign from admin section  through ajax call 5. Implemented pagination in celebrities campaign list page in admin section

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -60,6 +60,11 @@
                 <span class="space-sidebar">Active Influencers</span>
               </a>
             </li>
+            <li class="<%= current_path celebrity_campaigns_admin_admins_path %>">
+              <a href="<%= celebrity_campaigns_admin_admins_path %>">
+                <span class="space-sidebar">Celebrities Campaign</span>
+              </a>
+            </li>
             <li class="<%= current_path contact_us_admin_admins_path %>">
               <a href="<%= contact_us_admin_admins_path %>">
                 <span class="space-sidebar">Contact Us</span>
