--- a/app/views/influencers/_profile_modal.erb
+++ b/app/views/influencers/_profile_modal.erb
@@ -23,7 +23,7 @@
             <% if account.influencer.community? %>
                 <%= link_to 'Send Request', new_campaign_path(receiver_id: account.influencer.id, social_account_id: account.id), class: 'btn-brand-send-campaign-request', data: {href: new_campaign_path(receiver_id: account.influencer.id)} %>
             <% else %>
-                <%= link_to 'Send Request', campaign_to_celebrity_campaigns_path(receiver_id: account.influencer.id, social_account_id: account.id), class: 'btn-brand-send-campaign-request' %>
+                <%= link_to 'Send Request', campaign_to_celebrity_campaigns_path(receiver_id: account.influencer.id, social_account_id: account.id), method: :post, class: 'btn-brand-send-campaign-request' %>
             <% end %>
           </div>
         </div>
